# port-checker

./: .gitignore  README.md  phck.py  pyproject.toml  setup.py
src/pychkr/: __init__.py  main.py
